--- a/armoury/google_assistant_list.yaml
+++ b/armoury/google_assistant_list.yaml
@@ -1,17 +1,17 @@
-- light.Aeotec_ZW099_Smart_Dimmer_6_Level
 - light.asuna
-- light.chair_lamp
+- light.basement_dimmer_01
 - light.bedside_left
 - light.bedside_right
+- light.chair_lamp
 - light.dining_room_1
 - light.dining_room_2
 - light.dining_room_3
-- light.hibiki
-- light.homeseer_hswd100_wall_dimmer_level_3
-- light.homeseer_hswd100_wall_dimmer_level_2
-- light.homeseer_hswd100_wall_dimmer_level
-- light.kitchen_cabinet
-- switch.Aeotec_ZW096_Smart_Switch_6_Switch
+- light.front_entry_dimmer_01
+- light.guest_bedroom_dimmer_01
+- light.living_room_dimmer_01
+- light.mitsuri
+- light.sakuya
+- switch.master_bedroom_switch_01
 - script.control_garage_door
-- lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked
-- lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked_2
+- lock.front_entry_door_lock_01
+- lock.side_entry_door_lock_01
